--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,3 @@
-base.url=https://practice-automation.com/form-fields/
+base.url=https://practice-automation.com
+path.to.form_fields=/form-fields/
 browser=chrome
